--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
 <body>
     <div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
         <div class="w3-display-topleft w3-padding-large w3-xlarge">
-            <a href="./index.html">Go back to home page</a>
+            <a href="index.html">Go back to home page</a>
         </div>
         <div class="w3-display-middle">
             <h1 class="w3-jumbo w3-animate-top">Our history</h1>
@@ -108,7 +108,11 @@
                 </div>
                 </div>
     </header>
-                        
+    <footer>
+        <div>
+            <label style= 'color: black'> Created by Lynn Matar</label>
+        </div>
+    </footer>
     
 </body>
 </html>
