--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     <header class="bgimg-1" id="home">
             <ul>
                 <li><a style="left:0" href="#home" class="nav">Powered Up<span class="glyphicon glyphicon-home"></span></a></li>
-                <li><a href="#projects" class="nav"><span class="glyphicon glyphicon-user">USER</a></li>
-                <li><a href="./project.html" class="nav"><span class="glyphicon glyphicon-file">PROJECTS</a></li>
-                <li><a href="./about.html" class="nav"> <span class="glyphicon glyphicon-heart-empty"></span>ABOUT US</a></li>
+                <li><a href="index.php" class="nav"><span class="glyphicon glyphicon-user">ACCOUNT</a></li>
+                <li><a href="project.html" class="nav"><span class="glyphicon glyphicon-file">PROJECTS</a></li>
+                <li><a href="about.html" class="nav"> <span class="glyphicon glyphicon-heart-empty"></span>ABOUT US</a></li>
                  <li><a href="#contact" class="nav"><span class="glyphicon glyphicon-phone"></span>CONTACT</a></li>
             </ul>
             <span class="title">Welcome to Powered Up</span></br>
             <span class="subtitle">This is a fake powerplant</span><br>
-            <p><a href="#about" class="loginbutton">Login Here</a></p>
+            <p><a href="index.php" class="loginbutton">Login Here</a></p>
     </header>
 
     <!-- Contact Section --->
@@ -87,6 +87,9 @@
             <a href="" class="fa fa-google"></a>
             <a href="" class="fa fa-linkedin"></a>
             <a href="" class="fa fa-instagram"></a>
+        </div>
+        <div>
+            <label style= 'color: black'> Created by Lynn Matar</label>
         </div>
     </footer>
     
