--- a/project.html
+++ b/project.html
@@ -15,7 +15,7 @@
         
     }
     .bgimg {
-        background-image: url('aboutpic.png');
+        background-image: url('imgs/aboutpic.png');
         min-height: 100%;
         background-position: center;
         background-size: cover;
@@ -61,5 +61,10 @@
             </div>
         </div>
         </header>
+    <footer>
+        <div>
+            <label style= 'color: black'> Created by Lynn Matar</label>
+        </div>
+    </footer>
 </body>
 </html>
